pysources = files(
  'auto_fac_funcs.py',
  'benchmark.py',
  'compile.py',
  'distillation_mat_op.py',
  'eval.py',
  'expr_arithmetic.py',
  '__init__.py',
  'operators.py',
  'runtime_distillation.py',
  'runtime.py',
  'simulation.py',
  'wick.py',
  )
py3.install_sources(pysources, subdir: 'auto_contractor')
