# Need to update `exports.h` by running `bash update.sh` manually.

cpp_files = files(
  'contraction-field.cpp',
  'contraction-hvp.cpp',
  'contraction-pion.cpp',
  'fermion-action.cpp',
  'field.cpp',
  'field-double.cpp',
  'field-io.cpp',
  'field-utils.cpp',
  'fthmc.cpp',
  'hmc.cpp',
  'hmc-stats.cpp',
  'init.cpp',
  'inverter.cpp',
  'lib.cpp',
  'mat.cpp',
  'propagator.cpp',
  'qcd.cpp',
  'qm-action.cpp',
  'scalar-action.cpp',
  'selected-field.cpp',
  'vector_utils.cpp',
  )

lib = py3.extension_module('cqlat',
  cpp_files + config_file,
  dependencies: deps,
  include_directories: incdir,
  link_with: clib,
  install: true,
  install_dir: py3.get_install_dir(),
  build_rpath: ':'.join(qlat_utils_lib + [ '$ORIGIN/qlat/lib', ]),
  install_rpath: ':'.join(qlat_utils_lib + [ '$ORIGIN/qlat/lib', ]),
  # gnu_symbol_visibility: 'default',
  )
